--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 
-:root{
-    --a:0;
+:root {
+    --a: 0;
 }
+
 * {
     margin: 0;
     padding: 0;
@@ -13,6 +14,18 @@
 .close {
     display: none;
 }
+
+.logo {
+    display: flex;
+    gap: 7px;
+    width: 100%;
+    padding-top: -18px;
+    padding: 5px 0px;
+    font-weight: bold;
+    align-items: center;
+    font-size: 18px;
+}
+
 
 body {
     background-color: black;
@@ -70,7 +83,7 @@ body {
 
 }
 
-.footer a{
+.footer a {
     color: grey;
 }
 
@@ -101,10 +114,10 @@ body {
 .cardContainer {
     margin: 16px;
     display: flex;
-    gap: 10px;
+    gap: 22px;
     flex-wrap: wrap;
     overflow-y: auto;
-    max-height: 60vh; 
+    max-height: 60vh;
     /* justify-content: space-between; */
 }
 
@@ -118,7 +131,8 @@ body {
     position: relative;
     transition: all .9s;
 }
-.card:hover{
+
+.card:hover {
     background-color: rgb(105, 103, 103);
     cursor: pointer;
     --a: 1;
@@ -132,6 +146,8 @@ body {
     width: 100%;
     object-fit: contain;
 }
+
+
 
 .play {
     width: 28px;
@@ -177,13 +193,14 @@ body {
     width: 79px;
     cursor: pointer;
     font-size: 16px;
-   
-    font-family: var(--font-family,CircularSp,CircularSp-Arab,CircularSp-Hebr,CircularSp-Cyrl,CircularSp-Grek,CircularSp-Deva,var(--fallback-fonts,sans-serif));
+
+    font-family: var(--font-family, CircularSp, CircularSp-Arab, CircularSp-Hebr, CircularSp-Cyrl, CircularSp-Grek, CircularSp-Deva, var(--fallback-fonts, sans-serif));
 }
-.loginbtn:hover{
+
+.loginbtn:hover {
     font-weight: bold;
     transform: scale(1.07);
-    font-family: var(--font-family,CircularSp,CircularSp-Arab,CircularSp-Hebr,CircularSp-Cyrl,CircularSp-Grek,CircularSp-Deva,var(--fallback-fonts,sans-serif));
+    font-family: var(--font-family, CircularSp, CircularSp-Arab, CircularSp-Hebr, CircularSp-Cyrl, CircularSp-Grek, CircularSp-Deva, var(--fallback-fonts, sans-serif));
 }
 
 
@@ -318,7 +335,8 @@ body {
     gap: 12px;
     cursor: pointer;
 }
-.range input{
+
+.range input {
     cursor: pointer;
 }
 
@@ -368,7 +386,7 @@ body {
     }
 
     .playbar {
-        width: calc(100vw - 75px); 
+        width: calc(100vw - 75px);
     }
 
     .seekbar {
@@ -389,7 +407,7 @@ body {
 
     .cardContainer {
         margin: 0;
-        justify-content: center; 
+        justify-content: center;
     }
 
     .close {
@@ -408,7 +426,7 @@ body {
         margin-bottom: 35vh;
     }
 
-    .playbar{
+    .playbar {
         right: 25px;
     }
 }
@@ -426,7 +444,7 @@ body {
         margin: 0 6px;
     }
 
-    .header{
+    .header {
         padding: 7px;
     }
 
@@ -434,14 +452,14 @@ body {
         padding: 4px;
     }
 
-    .library{
+    .library {
         height: 85vh;
     }
 
-    .left{ 
+    .left {
         width: 100vw;
     }
 
- 
+
 
 }
